--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 
 :root {
   --yellow: hsl(47, 88%, 63%);
-  --white: #fff;
   --gray: hsl(0, 0%, 50%);
   --black: hsl(0, 0%, 8%);
 }
@@ -17,4 +16,26 @@ body {
   font-family: "Figtree", sans-serif;
   font-size: 16px;
   font-weight: 500;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--yellow);
+  height: 100vh;
+}
+
+.container {
+  background-color: #fff;
+  border-radius: 15px;
+  height: 550px;
+  width: 22%;
+  border: 2px solid var(--black);
+  box-shadow: var(--black) 6px 10px;
+  padding: 20px;
+}
+
+.container .article-img {
+  display: block;
+  width: 100%;
+  margin: 0 auto 20px;
+  border-radius: 15px;
 }
