--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   width: 22%;
   border: 2px solid var(--black);
   box-shadow: var(--black) 6px 10px;
-  padding: 20px;
+  padding: 20px 30px;
 }
 
 .container .article-img {
@@ -38,4 +38,45 @@ body {
   width: 100%;
   margin: 0 auto 20px;
   border-radius: 15px;
+}
+
+.container .tag {
+  background: var(--yellow);
+  font-weight: 800;
+  padding: 5px 10px;
+  display: inline-block;
+  border-radius: 4px;
+  margin-bottom: 15px;
+}
+
+.date {
+  margin-bottom: 20px;
+}
+
+.lead {
+  font-weight: 800;
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+
+.content {
+  color: var(--gray);
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+
+.credit {
+  display: flex;
+  align-items: center;
+}
+
+.credit img {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.credit h3 {
+  font-weight: 800;
+  font-size: 16px;
 }
