changed container sizing

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
   background-color: #fff;
   border-radius: 15px;
   height: 550px;
-  width: 22%;
+  width: 400px;
   border: 2px solid var(--black);
   box-shadow: var(--black) 6px 10px;
   padding: 20px 30px;
